tests/purs/failing/NewtypeMultiArgs.purs
-- @shouldFailWith ErrorParsingModule
module Main where

import Prelude

newtype Thing = Thing String Boolean
